<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMART ERP</string>

    <string name="hello_world">SMART ERP</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Pengaturan</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_barcode_scanner">Barcode Scanner</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_led_flash_mode">
        Flash akan hidup Apabila camera smartphone anda memiliki LED Flash
    </string>

    <string name="pref_title_delay">Waktu Tunda</string>
    <string name="pref_default_delay">1.5</string>

    <string name="pref_camera">Kamera yang digunakan</string>
    <string-array name="pref_camera_list_titles">
        <item>Belakang</item>
        <item>Depan</item>
    </string-array>
    <string-array name="pref_camera_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="flash">flash</string>
    <string name="title_card">Penjualan</string>
    <string name="backdrop_title">Smart ERP</string>
    <string name="backdrop_subtitle"> </string>
    <string name="account">Account</string>

</resources>
