<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="flash_mode"
            android:title="Mode LED Flash"
            android:summary="@string/pref_description_led_flash_mode"
            android:defaultValue="true"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
            android:key="delay_time"
            android:title="@string/pref_title_delay"
            android:defaultValue="@string/pref_default_delay"
            android:selectAllOnFocus="true"
            android:numeric="decimal"
            android:summary="test"
            android:hint="0.0 detik"
            android:maxLines="1"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
            android:key="use_camera"
            android:title="@string/pref_camera"
            android:defaultValue="0"
            android:entries="@array/pref_camera_list_titles"
            android:entryValues="@array/pref_camera_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

</PreferenceScreen>
