<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="net.tajriy.activity.SettingsActivity$GeneralPreferenceFragment"
            android:title="@string/pref_header_barcode_scanner"
            android:summary="Pengaturan Pemindai Barcode"
            android:icon="@drawable/ic_barcode_scanner_24dp_black"/>

    <header
            android:fragment="net.tajriy.activity.SettingsActivity$NotificationPreferenceFragment"
            android:title="@string/pref_header_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"/>

    <header
            android:fragment="net.tajriy.activity.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/pref_header_data_sync"
            android:icon="@drawable/ic_sync_black_24dp"/>

</preference-headers>
